=head1 NAME

Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf

(As of $Date$ $Revision$)

=head2 Changes in Devel::NYTProf 2.04 (svn rXXX) XXX

  Fixed rare divide-by-zero error in reporting code.

=head2 Changes in Devel::NYTProf 2.03 (svn r405) 15 Aug 2008

  NOTES:
  1. File format changed. Old profiles can't be read.
  2. Perl 5.8.1 is the oldest perl version supported.

  Fixed accounting for time spent executing subs that were
    compiled in string evals.
  Fixed risk of file corruption by names containing newlines.

  Changed to also profile compile-time activity by default.
  Improved formating of stats for subs called by a statement.

  Added start=begin|init|end|no option to NYTPROF env var.
  Added addpid=1 option to NYTPROF env var.
  Added support for .pmc files.
  Added detection of #line directives in source code
    currently just warns that they are not handled.

  Known issues:
  Perl 5.8.8 can report garbage file names for XS subs.
  (Perl 5.8.6 and 5.10 don't seem to have this problem.)
	Where a subroutine is called from code compiled in a string
  evals, the artificial "eval file names" are not yet merged.
  (You're unlikely to notice this obscure case anyway.)

=head2 Changes in Devel::NYTProf 2.02 (svn r361) 24 Jul 2008

  Fixed colors to use the median (not average) deviation from the median value.
  Fixed sub name resolution to work in more, perhaps all, unusual cases.

  Improved accuracy of subroutine timing by deducting statement measurement overheads.
  Improved readability of subroutine caller lists.
  Replaced use of fpurge() with a more portable approach.

  Added exclusive subroutine time (time in sub excluding subs it called).
  Added recording of xsub filenames (i.e. DBI.c)
  Added use of clock_gettime(), if available, for 100ns resolution.
    Uses CLOCK_MONOTONIC or else CLOCK_REALTIME. Thanks to Steve Peters.

=head2 Changes in Devel::NYTProf 2.01

  Fixed and unified module version numbers.
